﻿GNomEx Release Notes

5.2.1
--------------------------
- Allow non-admin gnomex users to view usage charts based on property setting.

5.2 (Aug 15, 2011)
--------------------------
- Switched to form-based authentication.
- Added password reset/change for external users.
- Fixed bug preventing username from being saved with session login.
- Changed wording on alert when price removed from price sheet.
- Added logout functionality.
- Set index tag group on sequencing experiments using barcoding even when only one sample
  submitted.  Needed so that index tag dropdown is appropriately enabled on lib prep worklist.
- Worklist changes:
   Sample Quality: Omit Bioanalyzer method, frag size from, and frag size to
   Library Prep: Omit library conc, Bioanalyzer method, gel size range to and gel size range from
   Cluster Gen: Omit Sample conc (pM)
   Seq run: Omit clusters per tile
   Data pipeline: Omit clusters per tile and PhiX error rate
   Data pipleline: Add read read1 clusters passed filters (M), read2 clusters passed filters, Q30 (GB)
- Fixed bug that was causing visibility and sample seq runs tabs to be disabled on 'Edit experiment' window.
- Fixed bug that was causing 'addchild' flash error for experiments view for guest login
- Allow experiment owners and lab managers to delete experiment as long as samples haven't gone through a workflow step yet.
- Switch to forms based authentication in http client java apps (package hci.gnomex.httpclient)
- Introduce java main for creating fdt upload staging directory for fdt command lin uploading

5.1.9.2 (Aug 9, 2011)
----------------------
- Fixed null pointer exception in SaveRequest that occurred when estimated price warning email was sent and
  billing contact email was null.

5.1.9.1 (Aug 1, 2011)
-----------------------
- Fixed bugs in sample sheet upload

5.1.9 (July 28, 2011)
-----------------------
- Replaced sample sheet upload with new version that handles all editable fields